first edition (wihtout css and special func chT)

--- a/PlayerAppl/index.html
+++ b/PlayerAppl/index.html
@@ -5,17 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Company</title>
-    <link rel="stylesheet" href="styles/employees.css">
+    <title>VideoAppl</title>
 </head>
-
 <body>
-    <div id="tags"></div>
-    <section nameSection="Add employee" id="form-section" display="none">
-        
+    <section id="form-section">
     </section>
-    <section nameSection="Show Employees" id="table-section" display="none">
-        
+    <section id="video-section>">
+        <video id="video" src=""></video>
     </section>
     <script src="src/main.js" type="module"></script>
 </body>
