--- a/PlayerAppl/index.html
+++ b/PlayerAppl/index.html
@@ -5,12 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/player.css">
     <title>VideoAppl</title>
 </head>
 <body>
+    <h3>VideoAppl</h3>
     <section id="form-section">
     </section>
-    <section id="video-section>">
+    <section id="video-section">
         <video id="video" src=""></video>
     </section>
     <script src="src/main.js" type="module"></script>
